2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Handle partitionless disks.

2010-10-17  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Don't clean blocklists before readability
	verfification.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Installation): Document embedding zone. Remove
	obsolete grub-install example.

2010-10-16  Szymon Janc <szymon@janc.net.pl>

	* grub-core/commands/legacycfg.c (grub_cmd_legacy_kernel):
	Set-but-not-used variable ifdef'ed.
	* grub-core/lib/legacy_parse.c (grub_legacy_parse): Likewise.
	* grub-core/bus/usb/ohci.c (grub_ohci_pci_iter): Set-but-not-used
	variable removed.
	* grub-core/disk/lvm.c (grub_lvm_scan_device): Likewise.
	* grub-core/fs/jfs.c (grub_jfs_find_file): Likewise.
	* grub-core/fs/minix.c (grub_minix_dir): Likewise.
	* grub-core/fs/sfs.c (grub_sfs_read_extent): Likewise.
	* grub-core/fs/ufs.c (grub_ufs_dir): Likewise.
	* grub-core/gfxmenu/gui_list.c (grub_gui_list_new): Likewise.
	* grub-core/gfxmenu/view.c (redraw_menu_visit): Likewise.
	* grub-core/gfxmenu/widget-box.c (draw): Likewise.
	* grub-core/lib/relocator.c (malloc_in_range): Likewise.
	* grub-core/loader/i386/bsdXX.c (grub_netbsd_load_elf_meta): Likewise.
	* grub-core/loader/i386/bsd_pagetable.c (fill_bsd64_pagetable):
	Likewise.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpihalt.c (skip_ext_op): Skip index field op.
	* include/grub/acpi.h (GRUB_ACPI_EXTOPCODE_INDEX_FIELD_OP): New
	enum value.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/acpihalt.c (get_sleep_type): Accept \_S5_ as
	synonym to _S5_. Needed for some DSDTs.

2010-10-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Userspace ACPI parser debugging.

	* grub-core/commands/acpihalt.c [GRUB_DSDT_TEST]: Include userspace
	headers and add relevant defines. Don't include standard headers.
	(main) [GRUB_DSDT_TEST]: New function.